Bug 153984 - Clicking cancel on the authentication dialog for fish/sftp/ftp kioslave gets dolphin stuck on "Loading folder"
Summary: Clicking cancel on the authentication dialog for fish/sftp/ftp kioslave gets ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-13 18:47 UTC by Ivo Anjo
Modified: 2012-10-29 19:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2007-12-13 18:47:55 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

How to reproduce:
Try to access a share with fish:// kioslave, and when the authorization dialog pops up, press cancel: an empty message appears on the status bar (in red) with no text (and a close button).
Comment 1 Ivo Anjo 2008-07-01 15:32:52 UTC
This also happens for the sftp and ftp kioslaves. (And still present on 4.1 beta 2).
Comment 2 Dario Andres 2008-12-14 19:43:48 UTC
Can you still reproduce this bug again with a recent KDE version ( 4.1.3 / 4.2beta1 / 4.2svn)? Thanks :)
Comment 3 Ivo Anjo 2008-12-14 19:56:44 UTC
Yeah I just retried with the latest kde4.2daily, and it's still there.
I tried to connect with fish to another computer, clicked cancel, and got the blank message.
Comment 4 Ivo Anjo 2010-01-03 20:17:34 UTC
With current trunk it seems to give an "Unknown Error" instead.
Comment 5 Dawit Alemayehu 2011-07-09 17:09:49 UTC
Cannot reproduce. I get the "Request Aborted By User" error page. Is this still an issue in the current released version of KDE, v4.6.4 as of this reply ?
Comment 6 Ivo Anjo 2011-07-10 11:12:40 UTC
With KDE 4.6.5, clicking cancel on the fish authentication dialog, dolphin gets stuck with the status bar:
"Connecting...           [X] Loading folder ... [ Progress bar moving back and forth ]"
The same happens with the sftp.

ftp gets stuck with a similar thing:
"Sending login information           [X] Loading folder ... [ Progress bar moving back and forth ]"

I've updated the title of this bug to reflect this issue.
Comment 7 Dawit Alemayehu 2011-08-17 22:28:02 UTC
This needs to be reported against dolphin since cancelling the authorization dialog works perfectly fine in Konqueror. Konqueror promptly shows the error page which states that the user cancelled the request.
Comment 8 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:52 UTC
Resetting assignee to default as per bug #305719
Comment 9 Emmanuel Pescosta 2012-10-29 15:13:36 UTC
Review-Request: https://git.reviewboard.kde.org/r/107116/
Comment 10 Emmanuel Pescosta 2012-10-29 19:55:58 UTC
Git commit 9dbc24fd647e0457d50ec901d33100c33967be68 by Emmanuel Pescosta.
Committed on 29/10/2012 at 20:54.
Pushed by emmanuelp into branch 'master'.

Fix Bug 153984 - Clicking cancel on the authentication dialog for fish/sftp/ftp kioslave gets dolphin stuck on "Loading folder"
REVIEW: 107116

M  +11   -0    dolphin/src/dolphinviewcontainer.cpp
M  +6    -0    dolphin/src/dolphinviewcontainer.h
M  +2    -0    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +5    -0    dolphin/src/kitemviews/kfileitemmodel.h
M  +1    -0    dolphin/src/views/dolphinview.cpp
M  +6    -0    dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/9dbc24fd647e0457d50ec901d33100c33967be68